[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://InitialTimer.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Lane.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameOver.tscn" type="PackedScene" id=5]
[ext_resource path="res://SVG/Layer 3 (3).svg" type="Texture" id=9]

[node name="Factory" type="Node2D"]
script = ExtResource( 3 )

[node name="Layer3(3)" type="Sprite" parent="."]
position = Vector2( 490, 403 )
texture = ExtResource( 9 )

[node name="Lane1" parent="." groups=["Lanes"] instance=ExtResource( 4 )]
position = Vector2( 54, 115 )

[node name="Lane2" parent="." groups=["Lanes"] instance=ExtResource( 4 )]
position = Vector2( 54, 270 )

[node name="Lane3" parent="." groups=["Lanes"] instance=ExtResource( 4 )]
position = Vector2( 54, 420 )

[node name="Lane4" parent="." groups=["Lanes"] instance=ExtResource( 4 )]
position = Vector2( 54, 570 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="InitialTimer" type="Timer" parent="."]
one_shot = true
autostart = true
script = ExtResource( 2 )

[node name="GameOver" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="InitialTimer" to="." method="initial_spawn"]
